add links to the lti updates

--- a/Learning Plan- LTI.html
+++ b/Learning Plan- LTI.html
@@ -78,7 +78,7 @@ data-config="{'skin':'skins/tunes/skin.css','volume':50,'autoplay':false,'shuffl
             <th>Notes</th>
         </tr><!--new lti stuff goes in this little pocket below-->
         <tr>
-            <td>Port of Seattle</td>
+            <td><a href="https://www.portseattle.org/about/port-fire-department">Port of Seattle</a></td>
             <td>D. Washington</td>
             <td>Firefighter</td>
             <td>Washington.D@portseattle.org</td>
@@ -88,7 +88,7 @@ data-config="{'skin':'skins/tunes/skin.css','volume':50,'autoplay':false,'shuffl
             <td></td>
         </tr>
         <tr>
-            <td>Port of Seattle</td>
+            <td><a href="https://www.portseattle.org/about/port-fire-department">Port of Seattle</a></td>
             <td>J. Schnase</td>
             <td>Firefighter</td>
             <td>Schnase.J@portseattle.org</td>
@@ -98,7 +98,7 @@ data-config="{'skin':'skins/tunes/skin.css','volume':50,'autoplay':false,'shuffl
             <td></td>
         </tr>
         <tr>
-            <td>Bellevue</td>
+            <td><a href="https://bellevuewa.gov/city-government/departments/fire/fire-explorers">Bellevue</a></td>
             <td>idk</td>
             <td>Youth Fire Training Program</td>
             <td>405-452-6892</td>
@@ -108,7 +108,7 @@ data-config="{'skin':'skins/tunes/skin.css','volume':50,'autoplay':false,'shuffl
             <td></td>
         </tr>
         <tr>
-            <td>Bates Technical College</td>
+            <td><a href="https://www.batestech.edu/programs/fire-service/">Bates Technical College</a></td>
             <td>Chris Grant (Fire Supervision Degree)</td>
             <td>Fire Instructor</td>
             <td>cgrant@batestech.edu</td>
@@ -118,7 +118,7 @@ data-config="{'skin':'skins/tunes/skin.css','volume':50,'autoplay':false,'shuffl
             <td></td>
         </tr>
         <tr>
-            <td>Bates Technical College</td>
+            <td><a href="https://www.batestech.edu/programs/fire-service/">Bates Technical College</a></td>
             <td>Adam Cabeza</td>
             <td>Fire Instructor</td>
             <td>acabeza@batestech.edu</td>
@@ -128,7 +128,7 @@ data-config="{'skin':'skins/tunes/skin.css','volume':50,'autoplay':false,'shuffl
             <td></td>
         </tr>
         <tr>
-            <td>Bates Technical College</td>
+            <td><a href="https://www.batestech.edu/programs/fire-service/">Bates Technical College</a></td>
             <td>Brian Wiwel</td>
             <td>Fire Instructor</td>
             <td>bwiwel@batestech.edu</td>
@@ -138,7 +138,7 @@ data-config="{'skin':'skins/tunes/skin.css','volume':50,'autoplay':false,'shuffl
             <td></td>
         </tr>
         <tr>
-            <td>PSSC</td>
+            <td><a href="https://pssc.highlineschools.org/programs/fire-emergency-services">PSSC</a></td>
             <td>Dan Lawson</td>
             <td>Youth Fire Instructor</td>
             <td>daniel.lawson@g.highlineschools.org</td>
