fixed yucky header font
i don like times new roman

--- a/Learning Plan- LTI.html
+++ b/Learning Plan- LTI.html
@@ -8,6 +8,7 @@
         .LTI {
             text-align: center;
             text-decoration-line: overline underline;
+            font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
         }
         td, th {
   border: 1px solid #000000;
