--- a/Learning Plan- LTI.html
+++ b/Learning Plan- LTI.html
@@ -47,7 +47,9 @@ body {background-color: #ffffff;
 .menu a {
 	color: blue;
 }
-
+button {
+    margin: auto;
+}
     </style>
     <body><!-- SCM Music Player https://www.scmplayer.net -->
 <script type="text/javascript" src="https://www.scmplayer.net/script.js" 
