center button again

--- a/Learning Plan- LTI.html
+++ b/Learning Plan- LTI.html
@@ -49,6 +49,7 @@ body {background-color: #ffffff;
 }
 button {
     margin: auto;
+    text-align: center;
 }
     </style>
     <body><!-- SCM Music Player https://www.scmplayer.net -->
