--- a/Learning Plan- LTI.html
+++ b/Learning Plan- LTI.html
@@ -145,7 +145,7 @@ data-config="{'skin':'skins/tunes/skin.css','volume':50,'autoplay':false,'shuffl
               </tr>
             </tbody>
           </table>
-        
+        </div>
           <script>
         const showCalendarButton = document.getElementById('showCalendarButton');
         const calendar = document.getElementById('calendar');
