--- a/Learning Plan- LTI.html
+++ b/Learning Plan- LTI.html
@@ -74,7 +74,7 @@ data-config="{'skin':'skins/tunes/skin.css','volume':50,'autoplay':false,'shuffl
         </div>
         <div class="LTI"><h2>LTI</h2></div>
         <div class="button-container">
-            <button id="showCalendarButton">Calendar</button>
+            <button id="showCalendarButton">Calendar</button>        </div>
         <table id="calendar" style="display: none;">
             <thead>
               <tr>
@@ -145,7 +145,6 @@ data-config="{'skin':'skins/tunes/skin.css','volume':50,'autoplay':false,'shuffl
               </tr>
             </tbody>
           </table>
-        </div>
           <script>
         const showCalendarButton = document.getElementById('showCalendarButton');
         const calendar = document.getElementById('calendar');
