--- a/Learning Plan- LTI.html
+++ b/Learning Plan- LTI.html
@@ -36,8 +36,7 @@ th {
 a {
     color: blue;
 }
-body {background-color: #ffffff;
-}
+
 .menu {
 	text-align: center;
 	margin-bottom: 24px;
@@ -47,12 +46,19 @@ body {background-color: #ffffff;
 .menu a {
 	color: blue;
 }
+body {
+    background-color: #ffffff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh; /* Full viewport height */
+    margin: 0; /* Remove default margin */
+    flex-direction: column; /* Stack the button and calendar vertically */
+}
+
 .button-container {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin: 20px 0;
-    }
+    margin-bottom: 20px; /* Add spacing between the button and the calendar */
+}
     </style>
     <body><!-- SCM Music Player https://www.scmplayer.net -->
 <script type="text/javascript" src="https://www.scmplayer.net/script.js" 
@@ -73,8 +79,9 @@ data-config="{'skin':'skins/tunes/skin.css','volume':50,'autoplay':false,'shuffl
             <a href="https://tinyurl.com/MasaB-HBP2028">Digital Portfolio</a>
         </div>
         <div class="LTI"><h2>LTI</h2></div>
-        <div class="button-container">
-            <button id="showCalendarButton">Calendar</button>        </div>
+<div class="button-container">
+            <button id="showCalendarButton">Calendar</button>
+</div>
         <table id="calendar" style="display: none;">
             <thead>
               <tr>
