--- a/Learning Plan- ToDo.html
+++ b/Learning Plan- ToDo.html
@@ -115,7 +115,7 @@ data-config="{'skin':'skins/tunes/skin.css','volume':50,'autoplay':false,'shuffl
                 <h3>2025-03-21</h3>
             </div>
             <p>This week, I think I accomplished a lot, for the first time in a while, I acually got my tutoring homework done. I still have pqqr homework to do though. That's something to work on for next week. I did spend a lot of time working on the robot at robotics, and I learned a lot of interesting stuff about Java, and driving the robot.</p>
-            <div class="date>">
+            <div class="date">
                 <h3>2025-02-21</h3>
             </div>
             <p>This week, I learned a lot of programming at robotics, and I did lots of tutoring homework. I sent 4 emails to contacts, and I started working on my literary analysis intro and conclusion. I also did my LC2 Reflection. I started brainstorming ideas for my learning plan next learning cycle</p>
