updated to do list

--- a/Learning Plan- ToDo.html
+++ b/Learning Plan- ToDo.html
@@ -87,6 +87,19 @@ data-config="{'skin':'skins/tunes/skin.css','volume':50,'autoplay':false,'shuffl
                 <th>Priority</th>
                 <th>Due</th>
             </tr>
+            <tr>
+                <td>turn in essay</td>
+                <td>not started</td>
+                <td>high</td>
+                <td>soon</td>
+            </tr>
+            <tr>
+                <td>current events</td>
+                <td>some progress</td>
+                <td>high</td>
+                <td>soon</td>
+            </tr>
+            <tr>
             <td>add components to learning plan</td>
             <td>not started</td>
             <td>high</td>
