update to do list
added a goal to update my project, changed it to robotics.

--- a/Learning Plan- ToDo.html
+++ b/Learning Plan- ToDo.html
@@ -88,6 +88,12 @@ data-config="{'skin':'skins/tunes/skin.css','volume':50,'autoplay':false,'shuffl
                 <th>Due</th>
             </tr>
             <tr>
+                <td>Add Robotics to my learning plan as a bigger project</td>
+                <td>not started</td>
+                <td>high</td>
+                <td>soon</td>
+            </tr>
+            <tr>
                 <td>Turn in essay</td>
                 <td>not started</td>
                 <td>high</td>
