--- a/Learning Plan- ToDo.html
+++ b/Learning Plan- ToDo.html
@@ -113,8 +113,8 @@ data-config="{'skin':'skins/tunes/skin.css','volume':50,'autoplay':false,'shuffl
             <tr>
                 <td>PQQR Math Homework</td>
                 <td>not started</td>
-                <td>low</td>
-                <td>2025-03-10</td>
+                <td>high</td>
+                <td>soon</td>
             </tr>
             <tr>
                 <td>Tutoring Math Homework</td>
