--- a/Learning Plan- Goals.html
+++ b/Learning Plan- Goals.html
@@ -144,7 +144,7 @@ data-config="{'skin':'skins/tunes/skin.css','volume':50,'autoplay':false,'shuffl
 </div>
 <div class="about">
     <div class="myProject"><h3>My Project</h3></div>
-    <p>My project this learning cycle is to learn java at robotics, and to keep working on my learning plan. For my learning plan, I have a couple ideas. The first one that I want to implement is adding the screen that needs you to hit space to enter the site. I think another easy one that I can get done pretty quickly is adding the calender to my learning plan. I have started learning Java, I hope to keep learning and to learn more in- depth during the off- season.</p>
+        <p>This learning cycle, I want to prioritize robotics as a project. I also want to keep working on my website, but I think that if I prioritize robotics a little bit more, then our team will do better and I will still be learning a lot.</p>
 <div class="list"><ul>
     <li>Code Learning Plan</li>
     <li>Learn Java at Robotics</li>
