--- a/Learning Plan- ToDo.html
+++ b/Learning Plan- ToDo.html
@@ -131,6 +131,10 @@ data-config="{'skin':'skins/tunes/skin.css','volume':50,'autoplay':false,'shuffl
         <!--insert new entry here-->        
         <div class="reflection">
             <div class="date">
+                <h3>2025-03-28</h3>
+            </div>
+            <p>This week, I got a lot of work done around robotics, but I didn't spend any time working on current events. I still have homework unfinished, and I didn't work very much on my learning plan. I did not do as well as I had hoped this week, and I have a lot of work to do next week.</p>
+            <div class="date">
                 <h3>2025-03-21</h3>
             </div>
             <p>This week, I think I accomplished a lot, for the first time in a while, I acually got my tutoring homework done. I still have pqqr homework to do though. That's something to work on for next week. I did spend a lot of time working on the robot at robotics, and I learned a lot of interesting stuff about Java, and driving the robot.</p>
