--- a/Learning Plan- Java.html
+++ b/Learning Plan- Java.html
@@ -56,7 +56,7 @@ data-config="{'skin':'skins/tunes/skin.css','volume':50,'autoplay':false,'shuffl
                 <a href="https://masalp.net/Learning%20Plan-%20LTI.html" target="content">LTI</a> /
                 <a href="https://masalp.net/Learning%20Plan-%20ToDo.html">To- Do</a> /
                 <a href="https://mail.google.com/mail/u/0/#inbox">✉E-mail✉</a> /
-                <a href="https://classroom.google.com/?emr=0">Google Classroom</a> /
+                <a href="https://classroom.google.com/u/1/">Google Classroom</a> /
                 <a href="https://imblaze.my.site.com/s/">ImBlaze</a> /
                 <a href="https://tinyurl.com/MasaB-HBP2028">Digital Portfolio</a>
             </div>
