add Bryan Boeholt to lti tracker

--- a/Learning Plan- LTI.html
+++ b/Learning Plan- LTI.html
@@ -178,6 +178,16 @@ data-config="{'skin':'skins/tunes/skin.css','volume':50,'autoplay':false,'shuffl
             <th>Notes</th>
         </tr><!--new lti stuff goes in this little pocket below-->
         <tr>
+            <td>BrN Engineering</td>
+            <td>Bryan Boeholt</td>
+            <td>Engineer</td>
+            <td>BBoeholt@brn-engineering.com</td>
+            <td>2025-03-13</td>
+            <td>2025/04/08</td>
+            <td>tbd</td>
+            <td></td>
+        </tr>
+        <tr>
             <td><a href="https://www.portseattle.org/about/port-fire-department">Port of Seattle</a></td>
             <td>D. Washington</td>
             <td>Firefighter</td>
