--- a/Learning Plan- ToDo.html
+++ b/Learning Plan- ToDo.html
@@ -88,6 +88,12 @@ data-config="{'skin':'skins/tunes/skin.css','volume':50,'autoplay':false,'shuffl
                 <th>Due</th>
             </tr>
             <tr>
+                <td>send thank you email</td>
+            </tr>
+            <tr>
+                <td>update lti tracker</td>
+            </tr>
+            <tr>
                 <td>Add Robotics to my learning plan as a bigger project</td>
                 <td>not started</td>
                 <td>high</td>
