Update Learning Plan- Goals.html

--- a/Learning Plan- Goals.html
+++ b/Learning Plan- Goals.html
@@ -100,6 +100,21 @@ data-config="{'skin':'skins/tunes/skin.css','volume':50,'autoplay':false,'shuffl
             <th>Priority</th>
         </tr>
         <tr>
+            <td>Design and build FRC minibot</td>
+            <td>offseason project</td>
+            <td>Exhibitions</td>
+            <td></td>
+            <td>/comms//qr//er//pq/</td>
+            <td>high</td>
+        </tr>
+        <tr>
+            <td>Code Tekerz Website</td>
+            <td>offseason project</td>
+            <td>Exhibitions</td>
+            <td></td>
+            <td>/comms//qr//er//pq/</td>
+        </tr>
+        <tr>
             <td>Code LP</td>
             <td>im copying niko</td>
             <td>:/</td>
