add notes after FAILED Interview

--- a/Learning Plan- LTI.html
+++ b/Learning Plan- LTI.html
@@ -226,7 +226,7 @@ data-config="{'skin':'skins/tunes/skin.css','volume':50,'autoplay':false,'shuffl
             <td></td>
             <td>2025-04-17</td>
             <td></td>
-            <td></td>
+            <td>When I tried calling, It didn't seem like he could hear me even when calling from two different phones</td>
         </tr>
         <tr>
             <td><a href="https://www.batestech.edu/programs/fire-service/">Bates Technical College</a></td>
