Update to do list

--- a/Learning Plan- ToDo.html
+++ b/Learning Plan- ToDo.html
@@ -91,23 +91,8 @@ data-config="{'skin':'skins/tunes/skin.css','volume':50,'autoplay':false,'shuffl
                 <td>send thank you email</td>
             </tr>
             <tr>
-                <td>update lti tracker</td>
-            </tr>
-            <tr>
                 <td>Add Robotics to my learning plan as a bigger project</td>
                 <td>not started</td>
-                <td>high</td>
-                <td>soon</td>
-            </tr>
-            <tr>
-                <td>Turn in essay</td>
-                <td>not started</td>
-                <td>high</td>
-                <td>soon</td>
-            </tr>
-            <tr>
-                <td>Current events</td>
-                <td>some progress</td>
                 <td>high</td>
                 <td>soon</td>
             </tr>
@@ -124,9 +109,9 @@ data-config="{'skin':'skins/tunes/skin.css','volume':50,'autoplay':false,'shuffl
             </tr>
             <tr>
                 <td>Tutoring Math Homework</td>
-                <td>in progress</td>
+                <td>done</td>
                 <td>high</td>
-                <td>2025-03-14</td>
+                <td>every friday</td>
             </tr>
         </table>
         <div class="reflectionHeader">
