--- a/Learning Plan- ToDo.html
+++ b/Learning Plan- ToDo.html
@@ -122,6 +122,10 @@ data-config="{'skin':'skins/tunes/skin.css','volume':50,'autoplay':false,'shuffl
         <!--insert new entry here-->        
         <div class="reflection">
             <div class="date">
+                <h3>2025-04-18</h3>
+            </div>
+            <p>This week, I feel like I got a lot done on the robotics website but I still need to do my project proposal. I'm almost done with the CAD for the minibot, and I have lots of progress on the team website. I also got a shadow day next week, so I'm excited about that.</p>
+            <div class="date">
                 <h3>2025-03-28</h3>
             </div>
             <p>This week, I got a lot of work done around robotics, but I didn't spend any time working on current events. I still have homework unfinished, and I didn't work very much on my learning plan. I did not do as well as I had hoped this week, and I have a lot of work to do next week.</p>
