Update Learning Plan- ToDo.html

--- a/Learning Plan- ToDo.html
+++ b/Learning Plan- ToDo.html
@@ -124,7 +124,7 @@ data-config="{'skin':'skins/tunes/skin.css','volume':50,'autoplay':false,'shuffl
             <div class="date">
                 <h3>2025-04-18</h3>
             </div>
-            <p>This week, I feel like I got a lot done on the robotics website but I still need to do my project proposal. I'm almost done with the CAD for the minibot, and I have lots of progress on the team website. I also got a shadow day next week, so I'm excited about that.</p>
+            <p>This week, I feel like I got a lot done on the robotics website. I'm almost done with the CAD for the minibot, and I have lots of progress on the team website. I also got a shadow day next week, so I'm excited about that.</p>
             <div class="date">
                 <h3>2025-03-28</h3>
             </div>
