Update Learning Plan- ToDo.html

--- a/Learning Plan- ToDo.html
+++ b/Learning Plan- ToDo.html
@@ -88,6 +88,10 @@ data-config="{'skin':'skins/tunes/skin.css','volume':50,'autoplay':false,'shuffl
                 <th>Due</th>
             </tr>
             <tr>
+                <td>health</td>
+                <td></td>
+            </tr>
+            <tr>
                 <td>send thank you email</td>
             </tr>
             <tr>
