add new entry to todo

--- a/Learning Plan- ToDo.html
+++ b/Learning Plan- ToDo.html
@@ -88,10 +88,6 @@ data-config="{'skin':'skins/tunes/skin.css','volume':50,'autoplay':false,'shuffl
                 <th>Due</th>
             </tr>
             <tr>
-                <td>health</td>
-                <td></td>
-            </tr>
-            <tr>
                 <td>Add Robotics to my learning plan as a bigger project</td>
                 <td>not started</td>
                 <td>high</td>
@@ -122,6 +118,10 @@ data-config="{'skin':'skins/tunes/skin.css','volume':50,'autoplay':false,'shuffl
         <!--use the "date" class for the date-->
         <!--insert new entry here-->        
         <div class="reflection">
+            <div class="date">
+                <h3>2025-04-25</h3>
+            </div>
+            <p>A struggle I had this week was my math homework. I completely forgot about it until yesterday, giving me one night to work on it all. I think I should try starting to work on it earlier in the week. I got all my health stuff done, so thats a plus. I also had a great shadow day with King County Fire District #2.</p>
             <div class="date">
                 <h3>2025-04-18</h3>
             </div>
