Update Learning Plan- ToDo.html

--- a/Learning Plan- ToDo.html
+++ b/Learning Plan- ToDo.html
@@ -89,8 +89,8 @@ data-config="{'skin':'skins/tunes/skin.css','volume':50,'autoplay':false,'shuffl
             </tr>
             <tr>
                 <td>Add Robotics to my learning plan as a bigger project</td>
-                <td>not started</td>
-                <td>high</td>
+                <td>done</td>
+                <td>low</td>
                 <td>soon</td>
             </tr>
             <tr>
@@ -101,7 +101,7 @@ data-config="{'skin':'skins/tunes/skin.css','volume':50,'autoplay':false,'shuffl
             <tr>
                 <td>PQQR Math Homework</td>
                 <td>not started</td>
-                <td>high</td>
+                <td>low</td>
                 <td>soon</td>
             </tr>
             <tr>
