--- a/Learning Plan- ToDo.html
+++ b/Learning Plan- ToDo.html
@@ -110,6 +110,12 @@ data-config="{'skin':'skins/tunes/skin.css','volume':50,'autoplay':false,'shuffl
                 <td>high</td>
                 <td>every friday</td>
             </tr>
+            <tr>
+                <td>Health</td>
+                <td>some progress</td>
+                <td>high</td>
+                <td></td>
+            </tr>
         </table>
         <div class="reflectionHeader">
             <h2>Weekly Reflection</h2>
@@ -118,6 +124,10 @@ data-config="{'skin':'skins/tunes/skin.css','volume':50,'autoplay':false,'shuffl
         <!--use the "date" class for the date-->
         <!--insert new entry here-->        
         <div class="reflection">
+            <div class="date">
+                <h3>2025-05-02</h3>
+            </div>
+            <p>I didn't really feel any motivation this week. I still have Health work to do, and I couldn't finish my math homework. I still have project work to do, and I need to start preparing for my panel. I have gotten a little bit of preparation for the Judo tournament tomorrow.</p>
             <div class="date">
                 <h3>2025-04-25</h3>
             </div>
