Update Learning Plan- ToDo.html

--- a/Learning Plan- ToDo.html
+++ b/Learning Plan- ToDo.html
@@ -116,6 +116,12 @@ data-config="{'skin':'skins/tunes/skin.css','volume':50,'autoplay':false,'shuffl
                 <td>high</td>
                 <td></td>
             </tr>
+            <tr>
+                <td>project proposal</td>
+                <td>progress</td>
+                <td>high</td>
+                <td></td>
+            </tr>
         </table>
         <div class="reflectionHeader">
             <h2>Weekly Reflection</h2>
