Update Learning Plan- ToDo.html

--- a/Learning Plan- ToDo.html
+++ b/Learning Plan- ToDo.html
@@ -88,6 +88,18 @@ data-config="{'skin':'skins/tunes/skin.css','volume':50,'autoplay':false,'shuffl
                 <th>Due</th>
             </tr>
             <tr>
+                <td>Annotated Biblioghaphy</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                </tr>
+                <tr>
+                    <td>shadow day reflection</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+            <tr>
                 <td>Add Robotics to my learning plan as a bigger project</td>
                 <td>done</td>
                 <td>low</td>
