--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
     </style>
 	<!--when making a new page, copy- start here-->
     <body>
+      <div class=logoo><img src="sr5z63f09776a4aws3.png"></div>
         <div class="menu">
            <a href="https://masalp.net">Home</a> /
             <a href="https://masalp.net/Learning%20Plan-%20Goals.html" target="content">Goals</a> /
