--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
   border: 1px solid black;
   padding: 0px;
 }
+.logoo{
+  width:50%;
+}
     </style>
 	<!--when making a new page, copy- start here-->
     <body>
