--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
   padding: 0px;
 }
 .logoo{
-  size:20%;
+  width: auto;
+  margin: auto;
 }
     </style>
 	<!--when making a new page, copy- start here-->
