--- a/Learning Plan- ToDo.html
+++ b/Learning Plan- ToDo.html
@@ -93,12 +93,6 @@ data-config="{'skin':'skins/tunes/skin.css','volume':50,'autoplay':false,'shuffl
                 <td></td>
                 <td></td>
                 </tr>
-                <tr>
-                    <td>shadow day reflection</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
             <tr>
                 <td>Add Robotics to my learning plan as a bigger project</td>
                 <td>done</td>
@@ -142,6 +136,8 @@ data-config="{'skin':'skins/tunes/skin.css','volume':50,'autoplay':false,'shuffl
         <!--use the "date" class for the date-->
         <!--insert new entry here-->        
         <div class="reflection">
+            <div class="date">2025-05-16</div>
+            <p>I got most of my stuff done this week, now most of the work I need to get done is organizing all my stuff into my digital protfolio. I got my math homework done too, and I should start gathering evidence for my project.</p>
             <div class="date">
                 <h3>2025-05-02</h3>
             </div>
