Update Learning Plan- ToDo.html

--- a/Learning Plan- ToDo.html
+++ b/Learning Plan- ToDo.html
@@ -89,7 +89,7 @@ data-config="{'skin':'skins/tunes/skin.css','volume':50,'autoplay':false,'shuffl
             </tr>
             <tr>
             <td>Add components to learning plan</td>
-            <td>not started</td>
+            <td>started</td>
             <td>high</td>
             <td>soon</td>
             <tr>
@@ -124,6 +124,8 @@ data-config="{'skin':'skins/tunes/skin.css','volume':50,'autoplay':false,'shuffl
         <!--use the "date" class for the date-->
         <!--insert new entry here-->        
         <div class="reflection">
+            <div class="date>">2025-05-23</div>
+            <p>this week, I completely forgot all about my tutoring math homework, so today im gonna work on that. I am about half way done with my level up cover letter, so i was hoping to be able to work on that, but I guess I'm gonna be working on math homework :(</p>
             <div class="date">2025-05-16</div>
             <p>I got most of my stuff done this week, now most of the work I need to get done is organizing all my stuff into my digital protfolio. I got my math homework done too, and I should start gathering evidence for my project.</p>
             <div class="date">
