Update Learning Plan- Goals.html

--- a/Learning Plan- Goals.html
+++ b/Learning Plan- Goals.html
@@ -166,5 +166,13 @@ data-config="{'skin':'skins/tunes/skin.css','volume':50,'autoplay':false,'shuffl
 </ul></div>
 <a href="https://docs.google.com/document/d/1X_-st5V7cEbpTvj0Y4QppL3QY0lMc7dEkUqddt5-tGQ/edit?tab=t.0">Project Proposal</a>
 </div>
+<div class="currentProjects">
+    <div class="myProject"><h3>Current Projects</h3></div>
+    <ul>
+        <li><a href="https://masalp.net">This website</a></li>
+        <li><a href="https://qm-rr.github.io/TekerzRobotics/">Tekerz Robotics</a></li>
+    </ul>
+
+</div>
     </body>
 </html>
