Update Learning Plan- Goals.html

--- a/Learning Plan- Goals.html
+++ b/Learning Plan- Goals.html
@@ -165,7 +165,7 @@ data-config="{'skin':'skins/tunes/skin.css','volume':50,'autoplay':false,'shuffl
     <li>Learn Java at Robotics</li>
 </ul></div>
 <a href="https://docs.google.com/document/d/1X_-st5V7cEbpTvj0Y4QppL3QY0lMc7dEkUqddt5-tGQ/edit?tab=t.0">Project Proposal</a>
-</div>
+
 <div class="currentProjects">
     <div class="myProject"><h3>Current Projects</h3></div>
     <ul>
@@ -173,6 +173,6 @@ data-config="{'skin':'skins/tunes/skin.css','volume':50,'autoplay':false,'shuffl
         <li><a href="https://qm-rr.github.io/TekerzRobotics/">Tekerz Robotics</a></li>
     </ul>
 
-</div>
+</div></div>
     </body>
 </html>
