make menu trebuchet ms

--- a/Learning Plan- Goals.html
+++ b/Learning Plan- Goals.html
@@ -36,6 +36,7 @@ th {
 	margin-bottom: 24px;
 	margin-top: 24px;
     font-size: smaller;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 .menu a {
 	color: blue;
@@ -70,6 +71,12 @@ th {
 	    a {
 		    color: blue;
 	    }
+        .currentProjects{
+            
+          background-color: blanchedalmond;
+  border: 1px solid black;
+  padding: 0px;
+        }
     </style>
     <body><!-- SCM Music Player https://www.scmplayer.net -->
 <script type="text/javascript" src="https://www.scmplayer.net/script.js" 
@@ -165,14 +172,13 @@ data-config="{'skin':'skins/tunes/skin.css','volume':50,'autoplay':false,'shuffl
     <li>Learn Java at Robotics</li>
 </ul></div>
 <a href="https://docs.google.com/document/d/1X_-st5V7cEbpTvj0Y4QppL3QY0lMc7dEkUqddt5-tGQ/edit?tab=t.0">Project Proposal</a>
-
+</div>
 <div class="currentProjects">
     <div class="myProject"><h3>Current Projects</h3></div>
     <ul>
         <li><a href="https://masalp.net">This website</a></li>
         <li><a href="https://qm-rr.github.io/TekerzRobotics/">Tekerz Robotics</a></li>
     </ul>
-
-</div></div>
+</div>
     </body>
 </html>
