--- a/Learning Plan- LTI.html
+++ b/Learning Plan- LTI.html
@@ -42,6 +42,7 @@ a {
 	margin-bottom: 24px;
 	margin-top: 24px;
     font-size: smaller;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 .menu a {
 	color: blue;
