--- a/Learning Plan- Goals.html
+++ b/Learning Plan- Goals.html
@@ -72,10 +72,16 @@ th {
 		    color: blue;
 	    }
         .currentProjects{
-            
-          background-color: blanchedalmond;
-  border: 1px solid black;
-  padding: 0px;
+         margin:auto;
+    width:50%;
+    color:rgb(0, 0, 0);
+    font-size: x-small;
+  font-family: arial, sans-serif;
+  margin: auto;
+  border: 2px solid black;
+  border-style: outset;
+  background-color: white;
+  padding: 7px;
         }
     </style>
     <body><!-- SCM Music Player https://www.scmplayer.net -->
