Make menu bold when on a specific page

--- a/Learning Plan- ToDo.html
+++ b/Learning Plan- ToDo.html
@@ -74,7 +74,7 @@ data-config="{'skin':'skins/tunes/skin.css','volume':50,'autoplay':false,'shuffl
             <a href="https://masalp.net">Home</a> /<!--once i publish it, change url to the published page instead of my C: drive-->
             <a href="https://masalp.net/Learning%20Plan-%20Goals.html" target="content">Goals</a> /
             <a href="https://masalp.net/Learning%20Plan-%20LTI.html" target="content">LTI</a> /
-            <a href="https://masalp.net/Learning%20Plan-%20ToDo.html">To- Do</a> /
+            <a href="https://masalp.net/Learning%20Plan-%20ToDo.html"><b>To- Do</b></a> /
             <a href="https://mail.google.com/mail/u/0/#inbox">✉E-mail✉</a> /
             <a href="https://classroom.google.com/u/1/">Google Classroom</a> /
             <a href="https://imblaze.my.site.com/s/">ImBlaze</a> /
