--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <body>
       <!--<div class=logoo><img src="sr5z63f09776a4aws3.png"></div>-->
         <div class="menu">
-           <a href="https://masalp.net">Home</a> /
+           <a href="https://masalp.net"><b>Home</b></a> /
             <a href="https://masalp.net/Learning%20Plan-%20Goals.html" target="content">Goals</a> /
             <a href="https://masalp.net/Learning%20Plan-%20LTI.html" target="content">LTI</a> /
             <a href="https://masalp.net/Learning%20Plan-%20ToDo.html">To- Do</a> /
