--- a/Learning Plan- Java.html
+++ b/Learning Plan- Java.html
@@ -53,7 +53,7 @@ data-config="{'skin':'skins/tunes/skin.css','volume':50,'autoplay':false,'shuffl
 
             <div class="menu">
                 <a href="https://masalp.net">Home</a> /
-                <a href="https://masalp.net/Learning%20Plan-%20Goals.html" target="content">Goals</a> /
+                <a href="https://masalp.net/Learning%20Plan-%20Goals.html" target="content"><b>Goals</b></a> /
                 <a href="https://masalp.net/Learning%20Plan-%20LTI.html" target="content">LTI</a> /
                 <a href="https://masalp.net/Learning%20Plan-%20ToDo.html">To- Do</a> /
                 <a href="https://mail.google.com/mail/u/0/#inbox">✉E-mail✉</a> /
