update lti tracker

--- a/Learning Plan- LTI.html
+++ b/Learning Plan- LTI.html
@@ -179,6 +179,26 @@ data-config="{'skin':'skins/tunes/skin.css','volume':50,'autoplay':false,'shuffl
             <th>Notes</th>
         </tr><!--new lti stuff goes in this little pocket below-->
         <tr>
+            <td><a href="https://9zero.com">9Zero Climate Innovation Hub</a></td>
+            <td>Lowell Bander</td>
+            <td>seattle leader</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td>2025-05-07</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td><a href="https://seattlearchitecture.org">Seattle Architecture Foundation</a></td>
+            <td>Tracey</td>
+            <td>Volunteer</td>
+            <td>angie.erdman@g.highlineschools.org</td>
+            <td></td>
+            <td>2025-05-20</td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
             <td><a href="https://www.burienfire.org">King Co. Fire Dist. 2</a></td>
             <td>Wayne Metz</td>
             <td>Chief of Operations</td>
