--- a/index.html
+++ b/index.html
@@ -1,104 +1,105 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>[Learning Plan]</title>
-        <link rel="icon" type="image/x-icon" href="favicon.ico">
-    </head>
-    <style>
-        .visionHeader {
-            color:rgb(0, 0, 0);
-            font-family: Arial, sans-serif;
-            text-decoration-line: overline underline;
-            text-align: center;
-        }
-.vision {margin:auto;
-    width:50%;
-    color:rgb(0, 0, 0);
-    font-size: x-small;
-  font-family: arial, sans-serif;
-  margin: auto;
-  border: 2px solid black;
-  border-style: outset;
-  background-color: white;
-  padding: 7px;
-}
-	    /*when making a new page, copy- start here*/
-.menu {
-	text-align: center;
-	margin-bottom: 24px;
-	margin-top: 24px;
-    font-size: smaller;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-}
-.menu a {
-	color: blue;
-}
-	    /*when making a new page, copy- end here*/
-.shortTerm {  background-color: blanchedalmond;
-  border: 1px solid black;
-  padding: 0px;
-}
-.longTerm { background-color: blanchedalmond;
-  border: 1px solid black;
-  padding: 0px;
-}
-.homeHeader { 
-    color:rgb(0, 0, 0);
-            font-family:  Arial, sans-serif;
-            text-decoration-line: overline underline;
-            text-align: center;
-}
-.aboutMe {
-    margin:auto;
-    width:50%;
-    color:rgb(0, 0, 0);
-    font-size: x-small;
-  font-family: arial, sans-serif;
-  margin: auto;
-  border: 2px solid black;
-  border-style: outset;
-  background-color: white;
-  padding: 7px;
-}
-.aboutMeHeader {
-    background-color: blanchedalmond;
-  border: 1px solid black;
-  padding: 0px;
-}
-.logoo{
-  width: auto;
-  margin: auto;
-}
-    </style>
-	<!--when making a new page, copy- start here-->
-    <body>
-      <!--<div class=logoo><img src="sr5z63f09776a4aws3.png"></div>-->
-        <div class="menu">
-           <a href="https://masalp.net"><b>Home</b></a> /
-            <a href="https://masalp.net/Learning%20Plan-%20Goals.html" target="content">Goals</a> /
-            <a href="https://masalp.net/Learning%20Plan-%20LTI.html" target="content">LTI</a> /
-            <a href="https://masalp.net/Learning%20Plan-%20ToDo.html">To- Do</a> /
-            <a href="https://mail.google.com/mail/u/0/#inbox">✉E-mail✉</a> /
-            <a href="https://classroom.google.com/u/1/">Google Classroom</a> /
-            <a href="https://imblaze.my.site.com/s/">ImBlaze</a> /
-            <a href="https://tinyurl.com/MasaB-HBP2028">Digital Portfolio</a>
-            </div>
-<!-- SCM Music Player https://www.scmplayer.net -->
-<script type="text/javascript" src="https://www.scmplayer.net/script.js" 
-data-config="{'skin':'skins/tunes/skin.css','volume':50,'autoplay':false,'shuffle':false,'repeat':1,'placement':'bottom','showplaylist':false,'playlist':[{'title':'Backlight','url':'https://music.youtube.com/watch?v=vHfAjfKVMew&si=4Oz17uLRuXJG_KRn'},{'title':'Dramaturgy','url':'https://music.youtube.com/watch?v=dEfl-ObuapA&si=BGFZ1dp5EmJI5AbS'},{'title':'Elliot P','url':'https://www.youtube.com/watch?v=NEajkPbi1ks'},{'title':'Fightsong','url':'https://music.youtube.com/watch?v=Pm_q0ACjP_k&si=tcQip9q3vcaggYrp'},{'title':'Here Comes The Sun','url':'https://music.youtube.com/watch?v=xUNqsfFUwhY&si=RXjVO0fCBTEGmv3m'},{'title':'Hey Jude','url':'https://music.youtube.com/watch?v=mQER0A0ej0M&si=qtPeG3Qw0wjEdRD1'},{'title':'Kaikai Kitan','url':'https://music.youtube.com/watch?v=isY3rtuSsK8&si=0_X3o3Jfq-Ii9ASh'},{'title':'Last Dance','url':'https://music.youtube.com/watch?v=WFRB9zl8tS8&si=yDWfVJCDt77SRD3v'},{'title':'New Genesis','url':'https://music.youtube.com/watch?v=ViOzYSYWCMM&si=9K5MQ9HHhX8Id98c'},{'title':'Show','url':'https://music.youtube.com/watch?v=vwZAqxL8rgs&si=DKTarF7D1PnIUPW0'},{'title':'Strawberry Fields Forever','url':'https://music.youtube.com/watch?v=10LSq_J5ol4&si=GRLhxlMPUlwgNuxU'},{'title':'Usseewa','url':'https://music.youtube.com/watch?v=GtPLYvYeZ_4&si=m7okC7kWR5REwQ6d'}]}" ></script>
-<!-- SCM Music Player script end -->
-<!--when making a new page, copy- end here-->
+<!doctype html>
+<html lang="en">
 
-
-
-        
-        <div class="homeHeader"><h2>Home</h2></div>
-        <div class="aboutMe">
-            <div class="aboutMeHeader"><h3>About Me</h3></div><p>My name is Masa. I am a 201 at Big Picture High School in Burien, WA. I do Taiko and I also do judo at Budokan Dojo in Seattle International Dist. My interests include Japanese and firefighting. I enjoy playing video games, doing balance sports, and hanging out with my family and friends. I don't enjoy math, losing, uhhh... I don't really hate that many things ig. As you can probably tell, this is my learning plan, meant to help me keep up with projects and goals.</p></div>
-        <div class=visionHeader><h2 style="text-align: center;">Vision</h2></div>
-        <div class=vision><div class="shortTerm"><h3>Short- Term Vision</h3></div>
-            <p>My Vision Last summer, I did a PSSC summer course. It was the Marine Science Technology one. I saw a little bit of the fire and emergency services course, and I think that's what sort-of sparked my interest in firefighting. I want to do the fire and emergency services PSSC course over the summer. If I like it, I’ll do that for my junior and senior years. If I don’t like it, I’ll do running start for my junior and senior years. By graduation, I want to go to University of Alaska Fairbanks or Bates Technical. I want to get a driver's license when I'm 16, I want to go to Japan with Michiru, and I want to get a job once I turn 16.</p>
-            <div class="longTerm"><h3>Long- Term Vision</h3></div>
-            <p>Post University, I want to become a Firefighter.</p></div>
-    </body>
+<head>
+<title>Home - Masa</title>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Asimovian&family=Jost:ital,wght@0,100..900;1,100..900&family=Outfit:wght@900&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Asimovian&family=Outfit:wght@100..900&display=swap" rel="stylesheet">
+</head>
+<style>
+    footer{
+        text-align: center;
+        writing-mode: vertical-rl;
+        font-size: 1.5rem;
+    }
+    footer a{
+        text-decoration: none;
+        color: white;
+        font-family: monospace;
+    }
+    footer a:hover,
+    footer a:active {text-decoration: underline;
+  
+}
+.nav-item a{
+    text-transform:uppercase;
+    font-size: 2.5rem;
+    font-family: 'Jost';
+    font-weight: 800;
+    margin-left: 10px;
+    color: white;
+    list-style-type: none;
+    text-decoration: none;
+     display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  height: 6vh;
+}
+.nav-item:hover,
+.nav-item:active {
+    transform: scale(1.05);
+    letter-spacing: 2px;
+}
+header {
+    text-transform: uppercase;
+    font-family: 'Asimovian';
+    color: white;
+    font-size:xx-large;
+    margin-left: 50px;
+}
+body {
+    background-color: black;
+}
+section{
+    text-align: center;
+    color: white;
+    font-family: monospace;
+    font-size: 1.5rem;
+}
+.tilt-l {
+  transform: rotate(-2deg);
+}
+.tilt-r {
+  transform: rotate(2deg);
+}
+.tilt-l2x {
+  transform: rotate(-5deg);
+}
+.tilt-r2x {
+  transform: rotate(5deg);
+}
+div { 
+    display: inline-block;}
+</style>
+<header>
+    <h1>
+        masa berry
+    </h1>
+</header>
+<div class="main-nav">
+<ul>
+    <li class="nav-item"><a href="#">home</a></li>
+    <li class="nav-item"><a href="#">goals</a></li>
+    <li class="nav-item"><a href="#">lti</a></li>
+    <li class="nav-item"><a href="#">todo</a></li>
+</ul>
+</div>
+<section>
+  <div id="one" class="tilt-l2x">"lock in</div>
+  <div id="three" class="tilt-r2x">eyes</div>
+  <div id="four" class="tilt-l">wide</div>
+  <div id="five" class="tilt-r">open</div>
+  <div id="six" class="tilt-l2x">regret</div>
+  <div id="seven" class="tilt-r2x">nothing"</div>
+  <div id="eight" class="tilt-l2x">- fractal161</div>
+</section>
+<footer>
+<a href="https://mail.google.com/mail/u/0/#inbox">MAIL</a>-
+<a href="https://classroom.google.com/u/0/">CLASSROOM</a>-
+<a href="https://imblaze.my.site.com/s/">IMBLAZE</a>
+</footer>
 </html>
