--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@ div {
 </header>
 <div class="main-nav">
 <ul>
-    <li class="nav-item"><a href="#">home</a></li>
-    <li class="nav-item"><a href="#">goals</a></li>
-    <li class="nav-item"><a href="#">lti</a></li>
-    <li class="nav-item"><a href="#">todo</a></li>
+    <li class="nav-item"><a href="https://masalp.net">home</a></li>
+    <li class="nav-item"><a href="https://masalp.net/Learning%20Plan-%20Goals.html">goals</a></li>
+    <li class="nav-item"><a href="https://masalp.net/Learning%20Plan-%20LTI.html">lti</a></li>
+    <li class="nav-item"><a href="https://masalp.net/Learning%20Plan-%20ToDo.html">todo</a></li>
 </ul>
 </div>
 <section>
