--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 .nav-item:active {
     transform: scale(1.05);
     letter-spacing: 2px;
+    transition: 0.3s
 }
 header {
     text-transform: uppercase;
