--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
         font-family: monospace;
     }
     footer a:hover,
-    footer a:active {text-decoration: underline;
-  
+    footer a:active {
+      text-decoration: underline;
+  transition: 0.3s
 }
 .nav-item a{
     text-transform:uppercase;
